# Hackathon

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  README.rst  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  technical_doc.md  vite.config.ts
src/: CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  Main.js  README.md  README.rst  body.js  example.py  index.html  index.js  main.py  math.js  output.txt  package (3).json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  setup.cfg  setup.py  technical_doc.md  websocket.js
src/DearDiary/: README.md  package.json
src/Discorger/: .eslintrc.json  CHANGELOG.md  README.md  e.js  package-lock.json  package.json
src/Events/: InteractionCreate.js  MessageCreate.js  Ready.js
src/Managers/: ModerationManager.js
src/Models/: Embed.js  Warning.js
src/PGamerX/: CHANGELOG.md  README.md  example.env  index.js  json.sqlite  package-lock.json  package.json
src/PGamerX_Bot/: CHANGELOG.md  example.env  index.ts  package-lock.json  package.json  slashdeploy.ts  tsconfig.json
src/Readme-Generator/: README.md  package.json
src/Structures/: Bot.js  Config.js  Utils.js
src/Visualizer-AI/: package.json
src/Yarn/: README.md  main.py
src/businesstemplates/: __init__.py  business_card_generator.py  resume_generator.py  utils.py
src/classes/: Editor.py  editmenu.py  helper.py  master.py  password.py  view_file.py
src/components/: Nav.vue  Tabs.vue
src/public/: index.html
src/scripts/: audio-manager.js  game.js  lerp.js  main.js
(+130 files in other folders)
