[metadata]
name = businesstemplates
author = That GenZ Gamer
author_email = thatgenzgamer@gmail.com
description = An efficient command line tool to create resumes and business cards on the go!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThatGenZGamer48/Hackathon
project_urls = 
	Bug Tracker = https://github.com/ThatGenZGamer48/Hackathon/issues
	Source Code = https://github.com/ThatGenZGamer48/Hackathon
license = MIT
keywords = Resume, Resume Generator, Business Card, Business Template, template, card
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires = 
	aiohttp==3.8.1
	aiosignal==1.2.0
	async-timeout==4.0.2
	attrs==21.4.0
	certifi==2021.10.8
	charset-normalizer==2.0.10
	easy-pil==0.1.4
	frozenlist==1.2.0
	idna==3.3
	lxml==4.7.1
	multidict==5.2.0
	Pillow==8.4.0
	python-docx==0.8.11
	requests==2.27.1
	typing_extensions==4.0.1
	urllib3==1.26.8
	yarl==1.7.2

[options.entry_points]
console_scripts =
	resume_generator = businesstemplates.resume_generator:main
	business_card_generator = businesstemplates.business_card_generator:main